--- a/web/templates/web/category_list.html
+++ b/web/templates/web/category_list.html
@@ -19,6 +19,7 @@
       <li class="list-group-item d-flex justify-content-between align-items-center">
         <span>{{ c.name }}</span>
         <div>
+          <a href="{% url 'category_detail' c.id %}" class="btn btn-sm btn-primary me-1">View Category</a>
           <a href="{% url 'category_edit' c.pk %}" class="btn btn-sm btn-outline-secondary me-1">Edit</a>
           <a href="{% url 'category_delete' c.pk %}" class="btn btn-sm btn-outline-danger">Delete</a>
         </div>
